@@ -38,6 +38,7 @@ Trunk (unreleased changes)
     HADOOP-2088 Make hbase runnable in $HADOOP_HOME/build(/contrib/hbase)
     HADOOP-2126 Use Bob Jenkins' hash for bloom filters
     HADOOP-2157 Make Scanners implement Iterable
+    HADOOP-2176 Htable.deleteAll documentation is ambiguous
 
 Release 0.15.1
 Branch 0.15
